--- a/web/themes/stone/assets/styles/main.css
+++ b/web/themes/stone/assets/styles/main.css
@@ -147,6 +147,49 @@ select {
     scroll-behavior: auto !important;
   }
 }
+select, input {
+  border: 0;
+  background-color: #3f3f3f;
+  color: #dcdcdc;
+  padding: 0.6rem 1rem;
+  font-size: 1.6rem;
+  border-radius: 0.4rem;
+  min-width: 15rem;
+  outline-color: #2f2b3a;
+  outline-width: 0.2rem;
+}
+select::placeholder, input::placeholder {
+  color: #dcdcdc;
+  opacity: 1;
+}
+
+select {
+  appearance: none;
+}
+
+.js-form-type-select {
+  position: relative;
+}
+.js-form-type-select::after {
+  content: "";
+  font-size: 1rem;
+  top: 50%;
+  right: 1rem;
+  position: absolute;
+  transform: translateY(-50%);
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:none;stroke:%23FFF;stroke-linecap:round;stroke-linejoin:round;stroke-width:2px;%7D%3C/style%3E%3C/defs%3E%3Cline class='cls-1' x1='16' x2='7' y1='20.5' y2='11.5'/%3E%3Cline class='cls-1' x1='25' x2='16' y1='11.5' y2='20.5'/%3E%3C/svg%3E%0A");
+  width: 2rem;
+  height: 2rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+[type=submit] {
+  cursor: pointer;
+  background-color: #2f2b3a;
+}
+
 .site-header {
   max-width: 140rem;
   margin: auto;
@@ -247,4 +290,29 @@ select {
 }
 .products-table nav a:hover {
   background-color: rgba(166, 136, 250, 0.2);
+}
+
+.view-page > * + * {
+  margin-top: 2rem;
+}
+
+.view-page__title {
+  font-size: 3.8rem;
+  font-weight: 600;
+}
+
+.view-page__filters input, .view-page__filters select {
+  width: 20rem;
+}
+.view-page__filters .form-actions {
+  display: flex;
+  gap: 2rem;
+}
+
+.view-page__filters label {
+  display: none;
+}
+.view-page__filters form {
+  display: flex;
+  gap: 2rem;
 }
