--- a/web/themes/stone/assets/styles/main.css
+++ b/web/themes/stone/assets/styles/main.css
@@ -71,6 +71,30 @@ main {
   transition: opacity 250ms ease-in;
 }
 
+h1 {
+  font-size: 4.8rem;
+}
+
+h2 {
+  font-size: 3.9rem;
+}
+
+h3 {
+  font-size: 3.3rem;
+}
+
+h4 {
+  font-size: 2.7rem;
+}
+
+h5 {
+  font-size: 2.3rem;
+}
+
+h6 {
+  font-size: 1.9rem;
+}
+
 /* Box sizing rules */
 *,
 *::before,
@@ -190,6 +214,13 @@ select {
   background-color: #2f2b3a;
 }
 
+@font-face {
+  font-family: "lg";
+  src: url("assets/fonts/lg.ttf?22t19m") format("truetype"), url("assets/fonts/lg.woff") format("woff"), url("assets/fonts/lg.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
 .site-header {
   max-width: 140rem;
   margin: auto;
@@ -297,7 +328,6 @@ select {
 }
 
 .view-page__title {
-  font-size: 3.8rem;
   font-weight: 600;
 }
 
@@ -315,4 +345,82 @@ select {
 .view-page__filters form {
   display: flex;
   gap: 2rem;
+}
+
+.product-content {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 4rem;
+}
+
+.product-content__details {
+  grid-column: 1/6;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.product-content__gallery {
+  grid-column: 6/13;
+  overflow: hidden;
+  position: relative;
+}
+.product-content__gallery img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-btn-next,
+.swiper-btn-prev {
+  cursor: pointer;
+  width: 4rem;
+  height: 4rem;
+  background-color: rgba(255, 255, 255, 0.35);
+  border-radius: 100%;
+  position: absolute;
+  left: 2rem;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 999;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: -0.1rem center;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:none;%7D%3C/style%3E%3C/defs%3E%3Cg data-name='Layer 2'%3E%3Cpath d='M20,25a1,1,0,0,1-.71-.29l-8-8a1,1,0,0,1,0-1.42l8-8a1,1,0,1,1,1.42,1.42L13.41,16l7.3,7.29a1,1,0,0,1,0,1.42A1,1,0,0,1,20,25Z'/%3E%3C/g%3E%3Crect class='cls-1' width='32' height='32'/%3E%3C/svg%3E%0A");
+}
+
+.swiper-btn-next {
+  left: unset;
+  right: 2rem;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:none;stroke:%23000;stroke-linecap:round;stroke-linejoin:round;stroke-width:2px;%7D%3C/style%3E%3C/defs%3E%3Cline class='cls-1' x1='21' x2='12' y1='16' y2='25'/%3E%3Cline class='cls-1' x1='12' x2='21' y1='7' y2='16'/%3E%3C/svg%3E%0A");
+  background-position: 0.1rem center;
+}
+
+.detail {
+  padding-top: 0.5rem;
+  padding-bottom: 0.25rem;
+  border-bottom: 0.1rem solid rgba(220, 220, 220, 0.2);
+  display: flex;
+  gap: 2rem;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.detail--vertical {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.detail__label {
+  font-size: 2.3rem;
+  line-height: 1.2;
+}
+
+.detail__value {
+  font-size: 3.3rem;
+  line-height: 1.2;
+  font-weight: 5c00;
 }
