--- a/web/themes/stone/assets/styles/src/base/_base.scss
+++ b/web/themes/stone/assets/styles/src/base/_base.scss
@@ -72,3 +72,10 @@ main {
   opacity: 1;
   transition: opacity 250ms ease-in;
 }
+
+h1 {font-size: 4.8rem;}
+h2 {font-size: 3.9rem;}
+h3 {font-size: 3.3rem;}
+h4 {font-size: 2.7rem;}
+h5 {font-size: 2.3rem;}
+h6 {font-size: 1.9rem;}
