--- a/web/themes/stone/templates/layout/html.html.twig
+++ b/web/themes/stone/templates/layout/html.html.twig
@@ -40,7 +40,7 @@
     <js-placeholder token="{{ placeholder_token }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Poppins:wght@400;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body{{ attributes.addClass(body_classes) }}>
     {#
