--- a/web/themes/stone/assets/styles/src/base/_forms.scss
+++ b/web/themes/stone/assets/styles/src/base/_forms.scss
@@ -45,3 +45,31 @@ select {
   cursor: pointer;
   background-color: $color-accent;
 }
+
+.form-item {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.field-scan-btn {
+  all: unset;
+  cursor: pointer;
+  padding: 0.6rem 1rem;
+  background-color: #1e1e1e;
+  border-radius: 0.4rem;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3Cstyle%3E.cls-1,.cls-2%7Bfill:none;%7D.cls-2%7Bstroke:%23fff;stroke-linecap:round;stroke-linejoin:round;%7D%3C/style%3E%3C/defs%3E%3Cg data-name='Layer 2'%3E%3Crect class='cls-1' width='24' height='24'/%3E%3Cpath class='cls-2' d='M9,6H7A1,1,0,0,0,6,7V9'/%3E%3Cpath class='cls-2' d='m15 6h2a1 1 0 0 1 1 1v2'/%3E%3Cpath class='cls-2' d='m18 15v2a1 1 0 0 1-1 1h-2'/%3E%3Cpath class='cls-2' d='M9,18H7a1,1,0,0,1-1-1V15'/%3E%3Cline class='cls-2' x1='6' x2='18' y1='12' y2='12'/%3E%3C/g%3E%3C/svg%3E");
+  background-position: center;
+  background-repeat: no-repeat;
+  text-indent: -999rem;
+  height: 1.8rem;
+  width: 1.8rem;
+  position: absolute;
+  top: 50%;
+  right: 0.4rem;
+  transform: translateY(-50%);
+}
+
+#edit-field-barcode-value {
+  padding-right: 4.8rem;
+}
