--- a/web/themes/stone/assets/styles/src/components/_product-details.scss
+++ b/web/themes/stone/assets/styles/src/components/_product-details.scss
@@ -46,6 +46,10 @@
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:none;%7D%3C/style%3E%3C/defs%3E%3Cg data-name='Layer 2'%3E%3Cpath d='M20,25a1,1,0,0,1-.71-.29l-8-8a1,1,0,0,1,0-1.42l8-8a1,1,0,1,1,1.42,1.42L13.41,16l7.3,7.29a1,1,0,0,1,0,1.42A1,1,0,0,1,20,25Z'/%3E%3C/g%3E%3Crect class='cls-1' width='32' height='32'/%3E%3C/svg%3E%0A");
 }
 
+.swiper-button-disabled {
+  visibility: hidden;
+}
+
 .swiper-btn-next {
   left: unset;
   right: 2rem;
